--- a/index.html
+++ b/index.html
@@ -1,71 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Chau+Philomene+One:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Assets/css/index.css">
+    <link rel="stylesheet" href="/Asset/css/index.css">
     <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACCUEIL</title>
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/logo_v1.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/logo.png"></a></div>
         <nav>
-            <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
-            <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
-            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT">FONCTIONNEMENT</span></button></a>
-            <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
+            <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></button></a>
+            <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></button></a>
+            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT" class="anton-regular">FONCTIONNEMENT</span></button></a>
+            <a href="ethique.html"><button><span id="ETHIQUE" class="anton-regular">ETHIQUE</span></button></a>
         </nav>
     </header>
     <div class="acceuil">
         <div id="slogan">
-            <h1>Yes We Hack</h1>
+            <h1 class="anton-regular">Yes We Hack</h1>
             <p>Paie une protection, pas la rançon</p>
         </div>
-        <video autoplay loop muted width="600">
-            <source src="Assets/images/fond.mp4" type="video/mp4">
-        </video>
+        <img src="Assets/images/fond_acc.jpg">
     </div>
     <div class="contenu_1">
-        <div class="titre_contenu_1">
-            <a><h1><strong>Qu'est ce que c'est?</strong></h1></a>
-        </div>
-        <div class="blocks">
+        <img src="Assets/images/fond_menu.jpg">
+        <div class="ligne1">
             <div class="block_1">
-                <img src="Assets/images/image_temp.jpg">
-                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+                <h1 class="anton-regular">Qu'est-ce que c'est ?</h1>
+                <hr>
+                <p>C'est la plus grande communauté européenne de hackers éthiques, dédiée à renforcer la cybersécurité.</p>
             </div>
             <div class="block_2">
-                <img src="Assets/images/image_temp.jpg">
-                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+                <h1 class="anton-regular">4,44 Millions de $</h1>
+                <h2>Coût moyen global d’une violation de données.</h2>
+                <p>
+                    Le coût moyen global d’une violation de données est passé de 4,88 millions de dollars en 2024 à 4,44 millions de dollars,
+                </p>
             </div>
             <div class="block_3">
-                <img src="Assets/images/image_temp.jpg">
-                <p>izyvdciyizvivcivzyeicyivezefbkzbeibziueibiubzeiczuyycgzbeycbyucebiyuzbeucbze</p>
+                <div class="titre">
+                    <h1 class="anton-regular">Protégez-vous</h1>
+                </div>
+                <div class="explication">
+                    <p>
+                        Mettre en place une stratégie de sécurité proactive
+                        comme le Bug Bounty ou la <a href="https://www.yeswehack.com/fr/product/vdp-politique-divulgation-vulnerabilites">Vulnerability Disclosure Policy (VDP)</a> de YesWeHack,
+                        c'est ne pas laisser la porte ouverte aux cybercriminels. Dans le paysage numérique
+                        actuel, complexe et en constante évolution, vos actifs (sites web,
+                        applications, API) comportent inévitablement des failles, même après un
+                        audit classique, leur protection est primordialle.<a href="fonctionnement.html">Voir Fonctionnement</a>
+                    </p>
+                </div>
             </div>
         </div>
+        <div class="ligne2">
+            <div class="block_1">
+                    <a href="https://www.google.fr/maps/place/Yes+We+Hack/@48.8533233,2.3619131,19.04z/data=!4m6!3m5!1s0x47e67122ad1f091f:0xb0630068fc799b4!8m2!3d48.8533675!4d2.3621824!16s%2Fg%2F11h7vj6bcg?entry=ttu&g_ep=EgoyMDI1MTAwNi4wIKXMDSoASAFQAw%3D%3D"><img src="Assets/images/carte.png"></a>
+                    <div id="liens">
+                        <a href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
+                        <a href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
+                        <a href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
+                        <a href="https://github.com/yeswehack"><img src="Assets/images/github.png"></a>
+                    </div>
+            </div>
+            <div class="block_2">
+                <h1 class="anton-regular">Comment ca marche?</h1>
+                <hr>
+                <p>Les organisations publient des programmes de bug bounty, et les chercheurs en sécurité soumettent leurs découvertes de failles afin quelles soient corriger.</p>
+            </div>
+            <div class="block_3">
+                <img id="pas_sec" src="Assets/images/hacké.png">
+                <img  id="sec" src="Assets/images/securise.png">
+            </div>           
+        </div>
+        <div class="ligne3">
+            <div class="block_1">
+                <h1 class="anton-regular">Quelles utilités?</h1>
+                <hr>
+                <p>YesWeHack aide les entreprises à anticiper les cyberattaques et à protéger leurs données sensibles.</p>
+            </div>
+            <div class="block_2">
+                <div class="eco">
+                    <h2 class="anton-regular" style="font-style: italic;">Economie</h2>
+                    <p>Tout savoir sur l'économie de YesWeHack</p>
+                </div>
+                <div class="lien">
+                    <a href="economie.html"><img src="Assets/images/fleche.png"></a>
+                </div>
+            </div>
+            <div class="block_3">
+                <h1 class="anton-regular">Decouvrir YesWeHack</h1>
+                <p>Cliquez pour en savoir plus !</p>
+                <a href="https://www.yeswehack.com/fr"><img src="Assets/images/site27.png"></a>
+            </div>           
+        </div>
+        
     </div>
     <div class="contenu_2">
-        <a href="histoire.html"><button id="lien_histoire"><span>En savoir +</span></button></a>
-        <video autoplay muted loop playsinline width="600">
-            <source src="Assets/images/fond_histoire_1.mp4" type="video/mp4">
-        </video>
+        <a href="histoire.html"><button id="lien_histoire"><span class="anton-regular" style="font-style: italic;">En savoir +</span></button></a>
+        <div id="lien_shadow"></div>
+            <img src="fond_histoire.jpg">
         <div class="presentation_1">
-            <h1>histoir bla?</h1>
-            <p>BLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+            <div>
+                <h1 class="anton-regular">La Direction</h1>
+            </div>
+            <div class="partie_1">
+                <p class="chau-philomene-one-regular-italic">Guillaume Vassault-Houlière 
+                    Co-Founder & CEO</p>
+               <img src="Assets/images/guillome.jpg">
+            </div>
+            <div class="partie_2">
+                <p class="chau-philomene-one-regular-italic">Romain Lecoeuvre
+                    Co-founder & COO </p>
+                <img src="Assets/images/romain.jpg"> 
+            </div>
+            <div class="partie_3">
+                <p class="chau-philomene-one-regular-italic">Kevin Gallerin<br>
+                    APAC CEO </p>
+                <img src="Assets/images/kevin.jpg"> 
+            </div>
         </div>
         <div class="presentation_2">
-            <img src="Assets/images/image_temp.jpg">
-            <h1>BLA bal blabla histoir</h1>
-            <p>uzgedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+            <img src="Assets/images/salarié.avif">
+            <h1 class="anton-regular">130 Collaborateurs</h1>
+            <p>Ses 130 experts se répartissent entre ses pôles de R&D, Triage, Customer Success, et Opérations.</p>
         </div>
         <div class="presentation_3">
-            <p>BLA bal blabla histoir uzguzdvc ugzvugvzvec uevzcuv euveuvet  cedcigegckzbla blaBLA bal blabla histoir uzgedcigegckzbla bla</p>
+            <p>Fondée en 2015, YesWeHack a révolutionné le secteur de la cybersécurité en Europe. Nous sommes la première plateforme de Bug Bounty qui connecte les entreprises de toutes tailles à une communauté mondiale de dizaines de milliers de hackers éthiques (Hunters). Notre mission est simple : transformer la détection de vulnérabilités en un processus continu, agile et payant uniquement au résultat. Nous aidons nos clients à sécuriser leurs actifs numériques avant que les cybercriminels ne les trouvent, en faisant du hack éthique la nouvelle norme.</p>
         </div>
     </div>
     <footer>
-        <p>Noe LAHURTE, BUT informatique, A1</p>
+        <div class="liens">
+            <div class="histoiore">
+                <h1 class="anton-regular">Histoire</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>
+            <div class="economie">
+                <h1 class="anton-regular">Economie</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>
+            <div class="fonctionnement">
+                <h1 class="anton-regular">Fonctionnement</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>           
+            <div class="ethiques">
+                <h1 class="anton-regular">Ethique</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>             
+        </div>
+        <img src="Assets/images/logo_ywh.png" id="YWH">
+        <img src="Assets/images/favicon.ico" id="Y">
+        <br>
+        <br>
+        <br>
+        <div class="suivre">
+            <p id="Suivez-les">Suivez-les</p>
+            <p id="Suivez-nous">Suivez-nous</p>
+        </div>
+        <br>
+        <hr id="SL_hr">
+        <hr id="SN_hr">
+        <div class="reseaux">
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="github.png"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
+        </div>     
+        <p id="mentions">@2025 SAES1-05-06 IUT-NFC Noe LAHURTE, BUT informatique, A1</p>
     </footer>
-
 </body>
 </html>
