--- a/economie.html
+++ b/economie.html
@@ -4,38 +4,165 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Économie</title>
-  <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
-  <link rel="stylesheet" href="Assets/css/styles.css">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styleJar.css">*
+
+  <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+  <!----------->
+
 </head>
   <body>
       <!-- Navigation commune -->
-      <header class="header" role="banner">
-        <div class="logo"><a href="index.html"><img src="Assets/images/logo_v1.png"></a></div>
-        <nav class="navigation" >
-          <a href="index.html">ACCUEIL</a>
-          <a href="histoire.html">HISTOIRE</a>
-          <a href="economie.html">ECONOMIE</a>
-          <a href="fonctionnement.html">FONCTIONNEMENT</a>
-          <a href="ethique.html">ETHIQUE</a>
+      <header class="header">
+       <nav>
+            <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
+            <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
+            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT">FONCTIONNEMENT</span></button></a>
+            <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
         </nav>
       </header>
 
-  
-      <section class="hackeur-section" >
-        <h1 id="h-1">Comment fonctionne le model  économique?</h1>
-        <p class="hackeur-subtitle">
-              Le système économique de YesWeHack est une plateforme
-              d’intermédiation, elle a donc pour principe de mettre
-                en relation des hackers éthiques (hunters) pour
-                accomplir des tâches type cyberattaque. YesWeHack
-                  prend des contrats auprès d’entreprises qui veulent
-              découvrir leurs failles ou tester leur sécurité.
+
+
+      <!--■■■■■■■■■■■■■■ - Entré de Page Section1 - ■■■■■■■■■■■■■■-->
+
+  <section class="Section01">
+    <div class="MAIN">
+      <img src="Back.jpg" alt="background" class="background">
+
+      <div class="bloc_image">
+          <img src="codeur01.jpg" alt="Visuel_Codeur">
+        </div>
+
+        <div class="bloc_texte">
+          <h1>Comment fonctionne le modèle économique ?</h1>
+          <p>
+            Le système économique de YesWeHack est une plateforme
+            d’intermédiation, elle a donc pour principe de mettre
+            en relation des hackers éthiques (hunters) pour
+            accomplir des tâches type cyberattaque...
+          </p>
+      </div>
+    </div>
+  </section>
+
+      <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
+      <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
+
+
+      <!--■■■■■■■■■■■■■■ - SECTION N*2 - ■■■■■■■■■■■■■■-->
+
+      <section class="Section02">
+        <div class="itemCube">
+        <div class="cube01"></div>
+        <div class="cube01_1"></div>
+
+
+        <div class="cube02"></div>
+        </div>
+        <div class="premiere">
+        <br>
+        <div>
+        <h1> C'est quoi....</h1>
+        <p>
+          Le modèle économique de YesWeHack repose sur une plateforme d’intermédiation.
+          Cette plateforme met en relation des hackers éthiques (appelés "hunters") avec des entreprises clientes
+          qui souhaitent identifier et corriger les vulnérabilités de leurs systèmes informatiques.
         </p>
-        <img src="Assets/images/codeur01.jpg" alt="Visuel_Codeur">
+        </div>
+        </div>
       </section>
 
+
+      <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
+      <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
+
+      <section class="bar01"></section>
+
+      <!--■■■■■■■■■■■■■■ - SECTION N*3 - ■■■■■■■■■■■■■■-->
+
+      <section class="seconde" >
+        
+        
+
+        <div class="MAIN02">
+
+          <!-- Image de fond -->
+          <img class="background02" src="Back.jpg" alt="Seconde_BackGround">
+
+        <div>
+        <h2>Le modèle économique de YesWeHack</h2>
+        <img src="graph01.png">
+        </div>
+
+        <div>
+        <h2>Le modèle économique de YesWeHack</h2>
+        <img src="graph02.png">
+        </div>
+
+
+        </div>
+      </section>
+
+      <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
+      <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
+
+
+      <!--■■■■■■■■■■■■■■ - Bar transition - ■■■■■■■■■■■■■■-->
+
+      <section class="bar01"></section>
+
+      <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
+      <!--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■-->
+
+
+
+
+      <section class="section04">
+
+        <div class="MAIN03">
+
+        <div>
+        <h2>Le modèle économique de YesWeHack</h2>
+        <p>
+          Le modèle économique de YesWeHack repose sur une plateforme d’intermédiation.
+          Cette plateforme met en relation des hackers éthiques (appelés "hunters") avec
+          des entreprises clientes qui souhaitent identifier et corriger les vulnérabilités de leurs systèmes informatiques.
+        </p>
+        </div>
+
+        <div>
+        <h2>Le modèle économique de YesWeHack</h2>
+        <p>
+          Le modèle économique de YesWeHack repose sur une plateforme d’intermédiation.
+          Cette plateforme met en relation des hackers éthiques (appelés "hunters") avec
+          des entreprises clientes qui souhaitent identifier et corriger les vulnérabilités de leurs systèmes informatiques.
+        </p>
+        </div>
+
+        <div>
+        <h2>Le modèle économique de YesWeHack</h2>
+        <p>
+          Le modèle économique de YesWeHack repose sur une plateforme d’intermédiation.
+          Cette plateforme met en relation des hackers éthiques (appelés "hunters") avec
+          des entreprises clientes qui souhaitent identifier et corriger les vulnérabilités de leurs systèmes informatiques.
+        </p>
+        </div>
+
+        </div>
+
+
+      </section>
+
+      <section class="bar01"></section>
+
+      <!--■■■■■■■■■■■■■■ - In Progresse - ■■■■■■■■■■■■■■-->
+
       <!-- Introduction -->
-      <section class="intro-section" >
+      <section >
         <h2>les acteur principaux des flux financiers..</h2>
         <p>
           les acteur principaux de nos flux financier son les l’entreprise cliente : 
@@ -70,6 +197,4 @@
   </body>
 
 </html>
-
-
 
