--- a/economie.html
+++ b/economie.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Économie</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styleJar.css">*
+  <link rel="stylesheet" href="styleEco.css">*
 
   <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -197,4 +197,5 @@
   </body>
 
 </html>
+
 
