--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Chau+Philomene+One:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/Assets/css/index.css">
+    <link rel="stylesheet" href="Assets/css/index.css">
     <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACCUEIL</title>
