--- a/economie.html
+++ b/economie.html
@@ -31,10 +31,10 @@
 
   <section class="Section01">
     <div class="MAIN">
-      <img src="Back.jpg" alt="background" class="background">
+      <img src="Assets/images/img_economie/Back.jpg" alt="background" class="background">
 
       <div class="bloc_image">
-          <img src="codeur01.jpg" alt="Visuel_Codeur">
+          <img src="Assets/images/img_economie/codeur01.jpg" alt="Visuel_Codeur">
         </div>
 
         <div class="bloc_texte">
@@ -91,16 +91,16 @@
         <div class="MAIN02">
 
           <!-- Image de fond -->
-          <img class="background02" src="Back.jpg" alt="Seconde_BackGround">
+          <img class="background02" src="Assets/images/img_economie/Back.jpg" alt="Seconde_BackGround">
 
         <div>
         <h2>Le modèle économique de YesWeHack</h2>
-        <img src="graph01.png">
+        <img src="Assets/images/img_economie/graph01.png">
         </div>
 
         <div>
         <h2>Le modèle économique de YesWeHack</h2>
-        <img src="graph02.png">
+        <img src="Assets/images/img_economie/graph02.png">
         </div>
 
 
@@ -197,6 +197,7 @@
   </body>
 
 </html>
+
 
 
 
