--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/logo.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico"></a></div>
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></button></a>
