--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="block_3">
                 <img id="pas_sec" src="Assets/images/hacké.png">
-                <img  id="sec" src="Assets/images/securise.png">
+                <img  id="sec" src="Assets/images/securisé.png">
             </div>           
         </div>
         <div class="ligne3">
