--- a/fonctionnement.html
+++ b/fonctionnement.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico">
     <link rel="stylesheet" href="Assets/css/Styles_fonctionnement.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Fonctionnement YesWeHack</title>
+<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,13 +21,14 @@
         </nav>
     </header>
     <section class="intro">
+        <img class="fond1" src="Assets/images/fond-fonctionnement.jpg" alt="fond-fonctionnement">
         <div style="display:flex; justify-content: center;">
-            <img src="Assets/images/img_fonctionnement/graph_fonctionnement.jpeg" alt="Graphique fonctionnement YesWeHack" style="width:750px; border-radius: 10px; margin-top: 30px; margin-bottom: 30px;">
+            <img class="graph" src="Assets/images/img_fonctionnement/graph_fonctionnement.jpeg" alt="Graphique fonctionnement YesWeHack">
         </div>
     </section>
     <section class="paragraphe1">
         <div>
-            <h2>Comment devenir Hunter ?</h2>
+            <h2 class="anton-regular">Comment devenir Hunter ?</h2>
             <p>
                 bjeveihahfviyhfhefhzifzygfgezfhbzfyfufez
             </p>
