ajout paragraphe 1 et 2, footer

--- a/histoire.html
+++ b/histoire.html
@@ -21,12 +21,12 @@
 <body>
 <!-- Navigation commune -->
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/logo_v1.png"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico"></a></div>
         <nav>
-            <a href="histoire.html"><button><span id="HISTOIRE">HISTOIRE</span></button></a>
-            <a href="economie.html"><button><span id="ECONOMIE">ECONOMIE</span></button></a>
-            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT">FONCTIONNEMENT</span></button></a>
-            <a href="ethique.html"><button><span id="ETHIQUE">ETHIQUE</span></button></a>
+            <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></button></a>
+            <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></button></a>
+            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT" class="anton-regular">FONCTIONNEMENT</span></button></a>
+            <a href="ethique.html"><button><span id="ETHIQUE" class="anton-regular">ETHIQUE</span></button></a>
         </nav>
     </header>
 
@@ -51,16 +51,16 @@
 
     <!-- Troisième section: débuts de l'entreprise -->
     <section class="section-debut">
-        <div class="section-debut">
-            <h3 class="anton-regular">Débuts de l'entreprise</h3>
-        </div>
         <div class="texte">
-            <ul class="chau-philomene-one-regular">
-                <li>Fondée en 2015 par Guillaume Vassault-Houlière et Manuel Dorne</li>
-                <li>Plateforme née du milieu des hackers éthiques</li>
-                <li>Connecte des organisations à des dizaines de miliers de chercheurs en cyber-sécurité</li>
-                <li>Définir les notions de bug bounty, hackeur éthique, white hat</li>
-            </ul>
+            <h3 class="anton-regular">Débuts de l'entreprise</h3>
+            <p class="chau-philomene-one-regular"> 
+                Fondée en 2015 par Guillaume Vassault-Houlière et Manuel Dorne, YesWeHack est une plateforme née du milieu
+                <br> des hackeurs éthiques, c'est-à-dire des pirates informatiques bienveillants qui utilisent leurs compétences pour 
+                <br> renforcer la sécurité des systèmes informatiques plutôt que de les compromettre. L'entreprise met en relation
+                <br> des organisations avec des dizaines de milliers de chercheurs en cybersécurité afin d'identifier et de corriger les
+                <br> bugs avant que les failles ne puissent être exploitées: c'est le bug bounty. Les hackeurs, aussi appelés "white hat"
+                <br> (au contraire des hackeurs malveillants, les "black hat") sont récompensés pour leurs découvertes.
+            </p>
         </div>
         <div class="img-gauche">
             <img src="Assets/images/img_histoire/image-histoire-1.jpeg" alt="image section 3">
@@ -69,17 +69,17 @@
 
     <!-- Quatrième section: expansion de la start-up -->
     <section class="section-expansion">
-        <div>
-            <h3 class="anton-regular">Expansion de la start-up</h3>
-        </div>
         <div class="texte">
-            <ul class="chau-philomene-one-regular">
-                <li>Un total de 40 000 inscrits</li>
-                <li>Différentes levées de fonds (2019, 2021, 2024)</li>
-                <li>Clients différents: DoctoLib, Décathlon, Orange, Tencent ... </li>
-                <li>2020: tester la sécurité de l'application TousAntiCovid</li>
-                <li>Certifiés SecNumCloud, ISO 27001, CSA STAR, SOC I /II Type 2 et PCI DSS</li>
-            </ul>
+            <h3 class="anton-regular">Expansion de la start-up</h3>
+                <p class="chau-philomene-one-regular">
+                    Depuis sa création, YesWeHack a connu une croissance rapide, rassemblant aujourd'hui plus de 40 000 white hats
+                    <br> inscrits sur leur plateforme. L'influence de l'entreprise s'est étendue, notamment avec plusieurs levées de fonds
+                    <br> menées en 2019, 2021 et 2024. De grandes organisations leur font maintenant confiance, comme par exemple
+                    <br> DoctoLib, Orange, Décathlon ou encore Tencent à l'international. En 2020, elle a été sollicitée par le gouvernement
+                    <br> français pour tester la sécurité de l'application TousAntiCovid. Elle possède plusieurs certifications de sécurité, telles
+                    <br> que SecNumCloud, ISO 27001, CSA STAR ou encore PCI DSS
+
+                </p>
         </div>
         <div class="img-droite">
             <img src="Assets/images/img_histoire/image-histoire-2.jpg" alt="image section 4">
@@ -88,10 +88,8 @@
 
     <!-- Cinquième section: YesWeHack aujourd'hui et demain -->
     <section class="section-aujd">
-        <div>
-            <h3 class="anton-regular">YesWeHack aujourd'hui et demain</h3>
-        </div>
         <div class="texte">
+            <h3 class="anton-regular">YesWeHack aujourd'hui et demain</h3>
             <ul class="chau-philomene-one-regular">
                 <li>Leader européen du bug bounty</li>
                 <li>Developpement constant de sa communauté dans le monde</li>
@@ -104,15 +102,74 @@
         </div>
     </section>
 
+    <!-- footer commun -->
     <footer>
-        <p class="chau-philomene-one-regular">sources
-            <br>
-            <a href="https://www.yeswehack.com/fr/about">YesWeHack.com,</a>
-            <a href="https://fr.wikipedia.org/wiki/YesWeHack">wikipedia.org,</a>
-            <a href="https://www.lemondeinformatique.fr/actualites/lire-pour-cibler-les-pme-yes-we-hack-rachete-sekost-97813.html">lemondeinformatique.fr,</a>
-            <a href="https://www.clubic.com/actualite-580342-le-francais-yeswehack-denicheur-de-vulnerabilites-informatiques-entre-dans-la-cour-des-grands.html">clubic.com</a>
-        </p>
-        <p class="chau-philomene-one-regular">Bryan BITTIGER, BUT informatique, A1</p>
+        <div class="liens">
+            <div class="histoiore">
+                <h1 class="anton-regular">Histoire</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>
+            <div class="economie">
+                <h1 class="anton-regular">Economie</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>
+            <div class="fonctionnement">
+                <h1 class="anton-regular">Fonctionnement</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>           
+            <div class="ethiques">
+                <h1 class="anton-regular">Ethique</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>             
+        </div>
+        <img src="Assets/images/logo_ywh.png" id="YWH">
+        <img src="Assets/images/favicon.ico" id="Y">
+        <br>
+        <br>
+        <br>
+        <div class="suivre">
+            <p id="Suivez-les">Suivez-les</p>
+            <p id="Suivez-nous">Suivez-nous</p>
+        </div>
+        <br>
+        <hr id="SL_hr">
+        <hr id="SN_hr">
+        <div class="reseaux">
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="github.png"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
+        </div>     
+        <p id="mentions">@2025 SAES1-05-06 IUT-NFC Bryan BITTIGER, BUT informatique, A1</p>
     </footer>
 
 </body>
