--- a/histoire.html
+++ b/histoire.html
@@ -150,8 +150,8 @@
                 </div>
             </div>             
         </div>
-        <img src="Assets/images/logo_ywh.png" id="YWH">
-        <img src="Assets/images/favicon.ico" id="Y">
+        <img src="Assets/images/logo_ywh.png" id="YWH" alt="logo yeswehack">
+        <img src="Assets/images/favicon.ico" id="Y" alt="logo du site">
         <br>
         <br>
         <br>
@@ -163,11 +163,11 @@
         <hr id="SL_hr">
         <hr id="SN_hr">
         <div class="reseaux">
-            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
-            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
-            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
-            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="github.png"></a>
-            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg" alt="logo yeswehack"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png" alt="logo X (anciennemnt twitter)"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png" alt="logo linkedin"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="github.png" alt="logo github"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png" alt="logo github"></a>
         </div>     
         <p id="mentions">@2025 SAES1-05-06 IUT-NFC Bryan BITTIGER, BUT informatique, A1</p>
     </footer>
