--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
         <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico"></a></div>
         <nav>
-            <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></button></a>
-            <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></button></a>
-            <a href="fonctionnement.html"><button><span id="FONCTIONNEMENT" class="anton-regular">FONCTIONNEMENT</span></button></a>
-            <a href="ethique.html"><button><span id="ETHIQUE" class="anton-regular">ETHIQUE</span></button></a>
+            <a href="histoire.html"><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></a>
+            <a href="economie.html"><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></a>
+            <a href="fonctionnement.html"><span id="FONCTIONNEMENT" class="anton-regular">FONCTIONNEMENT</span><a>
+            <a href="ethique.html"><span id="ETHIQUE" class="anton-regular">ETHIQUE</span></a>
         </nav>
     </header>
     <div class="acceuil">
@@ -76,7 +76,7 @@
             </div>
             <div class="block_3">
                 <img id="pas_sec" src="Assets/images/hacké.png">
-                <img  id="sec" src="Assets/images/securisé.png">
+                <img  id="sec" src="Assets/images/securisé.jpg">
             </div>           
         </div>
         <div class="ligne3">
@@ -105,7 +105,7 @@
     <div class="contenu_2">
         <a href="histoire.html"><button id="lien_histoire"><span class="anton-regular" style="font-style: italic;">En savoir +</span></button></a>
         <div id="lien_shadow"></div>
-            <img src="fond_histoire.jpg">
+            <img src="Assets/images/fond_histoire.png">
         <div class="presentation_1">
             <div>
                 <h1 class="anton-regular">La Direction</h1>
@@ -192,13 +192,12 @@
             <p id="Suivez-nous">Suivez-nous</p>
         </div>
         <br>
-        <hr id="SL_hr">
-        <hr id="SN_hr">
+
         <div class="reseaux">
             <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
             <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
             <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
-            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="github.png"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png"></a>
             <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
         </div>     
         <p id="mentions">@2025 SAES1-05-06 IUT-NFC Noe LAHURTE, BUT informatique, A1</p>
