--- a/ethique.html
+++ b/ethique.html
@@ -132,15 +132,73 @@
 
   </main>
 
-  <footer class="pied-page">
-    <small>Auteur : ALLALI Yanis — Page « Éthique »</small>
-    <div class="reseau">
-      <p><strong>Nous retrouver :</strong></p> <a href="https://x.com/yeswehack"><img src="twitter.png" alt="twitter"></a>
-      <a href="https://www.youtube.com/@yeswehack1337"><img src="Youtube_logo.png" alt="youtube"></a>
-      <a href="https://www.google.com/maps/place/Yes+We+Hack/@48.8540713,2.3660026,15.67z/data=!4m10!1m2!2m1!1syeswehack!3m6!1s0x47e67122ad1f091f:0xb0630068fc799b4!8m2!3d48.8533675!4d2.3621824!15sCgl5ZXN3ZWhhY2uSARljb21wdXRlcl9zZWN1cml0eV9zZXJ2aWNlqgFQCg0vZy8xMWc2X3dwMTkwEAEqDSIJeWVzd2VoYWNrKAQyHxABIhu7WqldWPyGBlgh-whvqK2wS1jlcQXC_XzLK1EyDRACIgl5ZXN3ZWhhY2vgAQA!16s%2Fg%2F11h7vj6bcg?entry=ttu&g_ep=EgoyMDI1MTAwNi4wIKXMDSoASAFQAw%3D%3D"><img src="maps.png" alt="maps"></a>
-        <a href="https://www.yeswehack.com/fr"><img src="yeswe.png" alt="YesWeHack"></a>
-    </div>
-  </footer>
+ <footer>
+        <div class="liens">
+            <div class="histoiore">
+                <h1 class="anton-regular">Histoire</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>
+            <div class="economie">
+                <h1 class="anton-regular">Economie</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>
+            <div class="fonctionnement">
+                <h1 class="anton-regular">Fonctionnement</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>           
+            <div class="ethiques">
+                <h1 class="anton-regular">Ethique</h1>
+                <div class="sous-liens">
+                    <a href="#"><p>Debut</p></a>
+                    <br>
+                    <a href="#"><p>Expension</p></a>
+                    <br>
+                    <a href="#"><p>Aujourd'hui</p></a>
+                    <br>
+                </div>
+            </div>             
+        </div>
+        <img src="Assets/images/logo_ywh.png" id="YWH">
+        <img src="Assets/images/favicon.ico" id="Y">
+        <br>
+        <br>
+        <br>
+        <div class="suivre">
+            <p id="Suivez-les">Suivez-les</p>
+            <p id="Suivez-nous">Suivez-nous</p>
+        </div>
+        <br>
+
+        <div class="reseaux">
+            <a id="logo_SL1" href="https://www.yeswehack.com/fr"><img src="Assets/images/yeswehack.jpeg"></a>
+            <a id="logo_SL2" href="https://twitter.com/yeswehack"><img src="Assets/images/x.png"></a>
+            <a id="logo_SL3" href="https://www.linkedin.com/company/yes-we-hack/"><img src="Assets/images/linkedin.png"></a>
+            <a id="logo_SL4" href="https://github.com/yeswehack"><img src="Assets/images/github.png"></a>
+            <a id="logo_SN" href="https://github.com/bbittige-iut90/SAES1-0506_YesWeHack"><img src="Assets/images/github.png"></a>
+        </div>     
+        <p id="mentions">@2025 SAES1-05-06 IUT-NFC Noe LAHURTE, BUT informatique, A1</p>
+    </footer>
 
 
 </body>
