ajout 3eme et dernière partie histoire

--- a/histoire.html
+++ b/histoire.html
@@ -21,7 +21,7 @@
 <body>
 <!-- Navigation commune -->
     <header>
-        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico"></a></div>
+        <div class="logo"><a href="index.html"><img src="Assets/images/favicon.ico" alt="logo du site"></a></div>
         <nav>
             <a href="histoire.html"><button><span id="HISTOIRE" class="anton-regular">HISTOIRE</span></button></a>
             <a href="economie.html"><button><span id="ECONOMIE" class="anton-regular">ECONOMIE</span></button></a>
@@ -90,12 +90,13 @@
     <section class="section-aujd">
         <div class="texte">
             <h3 class="anton-regular">YesWeHack aujourd'hui et demain</h3>
-            <ul class="chau-philomene-one-regular">
-                <li>Leader européen du bug bounty</li>
-                <li>Developpement constant de sa communauté dans le monde</li>
-                <li>Acquisition de Sekost en 2024</li>
-                <li>A obtenu le statut d'autorité de numérotation CVE (Common Vulnerabilities and Exposures)</li>
-            </ul>
+            <p class="chau-philomene-one-regular">
+                Aujourd'hui, YesWeHack s'impose comme le leader européen du bug bounty. L'entreprise poursuit un développement
+                <br> constant à l'international de sa communauté, qui ne cesse de croître. En 2024, elle fait l'acquisition de Sekost, une
+                <br> entreprise française spécialisée dans les audits de cybersécurité à distance. En 2025, elle devient la huitième organisation
+                <br> française à obtenir le statut d'autorité de numérotation CVE (Common Vulnerabilities and Exposures), un registre mondial
+                <br> des informations publiques relatives aux vulnérabilités de sécurité informatique. 
+            </p>
         </div>
         <div class="img-gauche">
             <img src="Assets/images/img_histoire/image-histoire-3.jpeg" alt="image section 5">
